[package]
name = "kmers"
version = "0.2.0"
edition = "2021"
description = "A library for k-mer manipulation."
license = "GPL-3.0-or-later"
repository = "https://github.com/drtconway/kmers-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
noodles = { version = "0.52.0", features = ["core", "fasta"] }